sveltekit breaking changes fix, prerender website update, and form fix, css overflow bug fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,8 @@ html {
 
     @media screen and (min-width: 1300px) {
         font-size: 20px;
+        overflow: hidden;
+        overflow-y: scroll;
     }
 }
 
